# serialcommunication

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  SerialClass.cpp  SerialClass.h  main.cpp
